Overflow issue solved

--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body {
     margin: auto;
 }
 
-
+.container,
+.container-fluid,
+.row {
+	margin: 0;
+	padding: 0
+}
 /*-----------------------Body-----------------------*/
 /*-----------------------Header-----------------------*/
 
@@ -58,6 +63,7 @@ footer {
     color:#f2f2f2;
     padding: 10px;
     text-align: center;
+    /*display: none;*/
 }
 
 footer a{
